--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.11.5",
+    "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3"
-  },
+    "react-dom": "^18"
+    },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
