--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "antd": "^5.11.5",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
-    },
+    "react-dom": "^18",
+    "react-fast-marquee": "^1.6.2"
+  },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
