--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-fast-marquee": "^1.6.2"
+    "react-fast-marquee": "^1.6.2",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
