--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
